--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,7 @@ endif()
 
 
 include_directories(
-    ${CMAKE_SOURCE_DIR}/memory
+    implementation/
 )
 
 STRING( REGEX REPLACE ".*/(.*)" "\\1" CURRENT_FOLDER ${CMAKE_CURRENT_SOURCE_DIR} ) 
@@ -23,7 +23,7 @@ STRING( REGEX REPLACE ".*/(.*)" "\\1" CURRENT_FOLDER ${CMAKE_CURRENT_SOURCE_DIR}
 PROJECT(${CURRENT_FOLDER})
 
 FILE(GLOB SRC_LIST_CPP ${PROJECT_SOURCE_DIR}/*.cpp
-    "memory/*.cpp" )
+    "implementation/memory/src/*.cpp" )
 
 AUX_SOURCE_DIRECTORY(. SRC_LIST_CPP)
 ADD_EXECUTABLE(${PROJECT_NAME} ${SRC_LIST_CPP})
